--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "parcel-project-template",
     "version": "2.0.0",
     "description": "",
-    "homepage": "https://netmarketolog.github.io/cinema-library",
+    "homepage": "https://netmarketolog.github.io/filmoteka",
     "scripts": {
         "start": "parcel src/*.html",
-        "build": "parcel build src/*.html --public-url /cinema-library/"
+        "build": "parcel build src/*.html --public-url /filmoteka/"
     },
     "repository": {
         "type": "git",
